--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
+    "@whizzy/react-country-code": "^0.0.2",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
