--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@material-tailwind/react": "^2.1.8",
     "@whizzy/react-country-code": "^0.0.2",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
