--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.8",
     "@whizzy/react-country-code": "^0.0.2",
     "clsx": "^2.1.0",
@@ -16,10 +17,12 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
